--- a/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
+++ b/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
@@ -20,18 +20,18 @@
                     style="width: 100%"/>
         </div>
         <div class="col-lg-4 col-md-6">
-            <label>RG:</label>
+                <label>RG:</label>
             <input type="text" 
                     [(ngModel)]="element.rg"
                     pInputText 
                     style="width: 100%"/>
         </div>
         <div class="col-lg-4 col-md-6">
-                <label>Data de Nascimento:</label>
-                <p-calendar [(ngModel)]="element.dataNascimento" 
-                            dateFormat="dd/mm/yy"
-                            [showIcon]="true"
-                            [style]="{'width':'100%'}"></p-calendar>
+        <label>Data de Nascimento:</label>
+        <p-calendar [(ngModel)]="element.dataNascimento" 
+        dateFormat="dd/mm/yy"
+        [showIcon]="true"
+        [style]="{'width':'100%'}"></p-calendar>
         </div>
         <div class="col-lg-4 col-md-6">
                 <label>CEP:</label>
@@ -134,4 +134,25 @@
         [toggleable]="true" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
         [collapsed]="true">
+        <div class="row">
+                <p-table [value]="element.Observações"
+                         [columns]="observacoesColumns"
+                         [scrollable]="true">
+                        <ng-template pTemplate="header" let-columns>
+                                <tr>
+                                <th *ngFor="let col of columns">
+                                        {{col.header}}
+                                </th>
+                                </tr>
+                        </ng-template>
+                        <ng-template pTemplate="body" let-rowData let-columns="columns">
+                                <tr>
+                                <td *ngFor="let col of columns">
+                                        {{rowData[col.field]}}
+                                </td>
+                                </tr>
+                        </ng-template>
+                </p-table>
+        </div>
 </p-panel>
+<button (click)="cadastrarAluno()"></button>
