--- a/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
+++ b/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
@@ -1,17 +1,22 @@
 <p-table [value]="list"
          [columns]="colunas"
          [scrollable]="true"
+         scrollHeight="80vh"
+         [tableStyleClass]="'table-striped'"
+         [style]="{'min-width':'800px'}"
+         scrollWidth="800px"
          [loading]="loading">
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let col of columns">
+            <th *ngFor="let col of columns" [ngStyle]="col.style" [pSortableColumn]="col.field">
                 {{col.header}}
+                <p-sortIcon [field]="col.field" ariaLabel="Activate to sort" ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order"></p-sortIcon>
             </th>
         </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
         <tr>
-            <td *ngFor="let col of columns">
+            <td *ngFor="let col of columns" [ngStyle]="col.style">
                 {{rowData[col.field]}}
             </td>
         </tr>
