--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -144,17 +144,55 @@ nav ul, nav li {
 
 .home-container{
   padding-left: 80px;
+  background-color: #575757;
+  height: 100vh;
 }
 
 label{
   font-size: 15px;
   font-weight: bold;
   margin-top: 10px;
-  margin-bottom: 0;
+  margin-bottom: 0 !important;
 }
 
 .tableListagem{
   width: 100%;
   height: 100vh;
   overflow-y: hidden;
+}
+
+.ui-chkbox {
+  padding-top: 10px;
+}
+
+.ui-autocomplete-dropdown{
+  height: 34px;
+}
+
+.form-button{
+  width:100%; 
+  height:34px;
+}
+
+.ui-widget-content{
+  border: none;
+}
+
+.scrollbar {
+  background-color: #F5F5F5;
+  float: left;
+  height: 300px;
+  margin-bottom: 25px;
+  margin-left: 22px;
+  margin-top: 40px;
+  width: 65px;
+  overflow-y: scroll;
+}
+
+.force-overflow {
+  min-height: 450px;
+}
+
+a:hover {
+  color: #0F2451;
 }
