--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -50,7 +50,7 @@
 <div class="home-container">
     <p-breadcrumb [home]="home" [model]="breadCrumbItems"></p-breadcrumb>
     <div *ngIf="selected['aluno']">
-            <menu-aluno #menuAluno [(loading)]="loading"></menu-aluno>
+            <menu-aluno #menuAluno [(loading)]="loading" (bread)="adicionaBread($event)"></menu-aluno>
             <!-- <table-listar-aluno [loading]="loading" (breadCrumb)="adicionaBread($event)"></table-listar-aluno>
             <formulario-adiciona-aluno [loading]="loading"></formulario-adiciona-aluno> -->
     </div>
