--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,4 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+
+@font-face {
+  font-family: NimbusSansBecker;
+  src: url(./fonts/nimbus-sans-becker.ttf);
+}
+
+:root{
+  --fundo:#4d575b;
+  --fundoopac:#4d575b80;
+  --escuro:#191716;
+  --claro:#bbced3;
+  --azulcl:#4f7cac;
+  --azules:#0f084b;
+  --error:#520B03;
+  --gelo: #F0F8FF;
+}
+
 .fa-2x {
   position: relative;
     padding: 10px 0;
@@ -13,8 +30,8 @@
   overflow: visible;
   cursor: pointer;
 }
-.main-menu:hover .hamburger-menu{
-  display: inherit;
+.hamburger-menu{
+  padding-top: 20px;
 }
 .main-menu:hover .hamburger-menu{
   display: none;
@@ -26,7 +43,7 @@
 
 .main-menu {
   background: #2e2e2e;
-  border-right: 1px solid #e5e5e5;
+  border-right: 1px solid var(--claro);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -44,7 +61,7 @@
   width: auto;
   max-width: 250px;
   height: auto;
-  max-height: 50px;
+  max-height: 70px;
   display: none;
 }
 
@@ -63,7 +80,7 @@
   display: table;
   border-collapse: collapse;
   border-spacing: 0;
-  color: #999 !important;
+  color: var(--claro) !important;
   font-family: arial;
   font-size: 16px;
   text-decoration: none;
@@ -124,13 +141,13 @@ nav ul, nav li {
 }
 
 .main-menu li:hover>a, nav.main-menu li.active>a, .dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus, .dropdown-menu>.active>a, .dropdown-menu>.active>a:hover, .dropdown-menu>.active>a:focus, .no-touch .dashboard-page nav.dashboard-menu ul li:hover a, .dashboard-page nav.dashboard-menu ul li.active a {
-  color: #fff !important;
-  background-color: #5fa2db;
+  color: var(--claro) !important;
+  background-color: var(--azulcl);
 }
 
 .area {
   float: left;
-  background: #e2e2e2;
+  background: var(--claro);
   width: 100%;
   height: 100%;
 }
@@ -144,7 +161,7 @@ nav ul, nav li {
 
 .home-container{
   padding-left: 80px;
-  background-color: #575757;
+  background-color: var(--escuro);
   height: 100vh;
   overflow-y: auto;
 }
@@ -172,7 +189,7 @@ label{
 
 .form-button{
   width:100%; 
-  height:34px;
+  height:31px;
 }
 
 .ui-widget-content{
@@ -180,7 +197,7 @@ label{
 }
 
 .scrollbar {
-  background-color: #F5F5F5;
+  background-color: var(--claro);
   float: left;
   height: 300px;
   margin-bottom: 25px;
@@ -195,37 +212,60 @@ label{
 }
 
 a:hover {
-  color: #0F2451;
+  color: var(--azulcl);
   cursor: pointer;
 }
 
 .form-group > input.ui-inputtext.invalidField {
-  border: 1px solid #d21c29 !important;
+  border: 1px solid var(--error) !important;
   width: 100%;
 }
 
 .ui-calendar.invalidField > input {
-  border: 1px solid #d21c29 !important;
+  border: 1px solid var(--error) !important;
 }
 
 .form-group input.ui-inputtext.invalidField, .invalidFieldData {
-  border: 1px solid #d21c29 !important;
+  border: 1px solid var(--error) !important;
 }
 
 p-autocomplete .invalidField {
-  border: 1px solid #d21c29 !important;
+  border: 1px solid var(--error) !important;
 }
 
 .ui-card.ui-widget.ui-widget-content {
-  box-shadow: 3px 4px 3px #ffffff73;
-  border: 1px solid white;
+  box-shadow: 3px 4px 3px var(--claro);
+  border: 1px solid var(--claro);
 }
 
 .ui-card.ui-widget.ui-widget-content a{
   font-weight: bold;
 }
+
 .ui-card.ui-widget.ui-widget-content a:hover{
-  color: #0F2451;
+  color: var(--azulcl);
 }
 
+.ui-chkbox-label{
+  vertical-align: text-top;
+}
+.ui-card-title{
+  text-decoration: underline;
+}
 
+.home-container .ui-breadcrumb{
+  padding: .5em .1em;
+  border-bottom: 1px solid white;
+  margin: 0 16px;
+  font-size: 20px;
+  font-weight: normal;
+  font-family: NimbusSansBecker;
+}
+
+.ui-card.ui-widget.ui-widget-content {
+  background-color: var(--fundoopac);
+}
+
+.ui-state-highlight.ui-growl-message-error{
+  background-color: var(--error);
+}
