--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -274,3 +274,7 @@ p-autocomplete .invalidField {
   border: 1px solid var(--escuro);
   border-radius: 0px;
 }
+
+.table-striped tbody tr:hover{
+  background-color: var(--azulcl);
+}
